--- a/02-bases/package.json
+++ b/02-bases/package.json
@@ -15,7 +15,9 @@
     "nodemon": "^3.1.9"
   },
   "dependencies": {
+    "axios": "^1.8.4",
     "get-age": "^1.0.1",
-    "uuid": "^11.1.0"
+    "uuid": "^11.1.0",
+    "winston": "^3.17.0"
   }
 }
